catkin_ws/logs/iq_gnc/build.make.297.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:52:6: error: redefinition of ‘bool isMapOriginSet’
   52 | bool isMapOriginSet = false;
      |      ^~~~~~~~~~~~~~
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:45:6: note: ‘bool isMapOriginSet’ previously defined here
   45 | bool isMapOriginSet = false;
      |      ^~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
